Add configurations for server